--- a/package.json
+++ b/package.json
@@ -1,19 +1,56 @@
-{"name":"Test-task-Rashyn-public",
-"private":true,
-"version":"0.0.0",
-"type":"module",
-"homepage":"https://github.com/rasinoleg/Test-task-Rashyn-public/",
-"devDependencies":{"@types/react-router-dom":"^5.3.3",
-"prop-types":"^15.8.1"},
-"dependencies":{"@redux-devtools/extension":"^3.3.0",
-"@reduxjs/toolkit":"^2.0.1",
-"axios":"^1.6.2",
-"clsx":"^2.0.0",
-"formik":"^2.4.5",
-"modern-normalize":"^2.0.0",
-"notiflix":"^3.2.6","react-dom":"^18.2.0",
-"react-helmet-async":"^2.0.3",
-"react-redux":"^9.0.2",
-"react-router-dom":"^6.20.1",
-"redux":"^5.0.0",
-"styled-components":"^6.1.1"}}
+{
+  "name": "Test-task-Rashyn-public",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "homepage": "https://github.com/rasinoleg/Test-task-Rashyn-public/",
+  "scripts": {
+    "start": "vite",
+    "dev": "vite",
+    "build": "vite build --base=./",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
+  },
+  "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.5.0",
+    "formik": "^2.4.5",
+    "modern-normalize": "^2.0.0",
+    "notiflix": "^3.2.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
+    "react-input-slider": "^6.0.1",
+    "react-loader-spinner": "^5.4.5",
+    "react-number-format": "^5.3.1",
+    "react-redux": "^8.1.3",
+    "react-responsive": "^9.0.2",
+    "react-router-dom": "^6.20.1",
+    "react-select": "^5.7.4",
+    "react-slick": "^0.29.0",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.1",
+    "yup": "^1.2.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-react": "^4.2.1",
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "eslint": "^8.45.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "gh-pages": "^6.0.0",
+    "tailwindcss": "^3.3.6",
+    "vite": "^4.4.5"
+  }
+}
